update: animation, alignment, and message fix

--- a/10.user-manag-crm/public/assets/css/style.css
+++ b/10.user-manag-crm/public/assets/css/style.css
@@ -31,3 +31,11 @@ header .navbar {
   from { -moz-transform: rotate(0deg); }
   to   { -moz-transform: rotate(360deg); }
 }
+
+/* NGANIMATE */ 
+/* ========= */ 
+.show-hide-message.ng-hide-remove {
+  animation: zoomIn 0.3s infinite;
+  -webkit-animation: zoomIn 0.3s infinite;
+  -moz-animation: zoomIn 0.3s infinite;
+}
